[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
mongodb = "2.6.0"
tokio = { version = "1.29.1", features=["macros","rt-multi-thread"]}
nanoid = "0.4.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.1", features = ["cors"] }

[profile.release]
codegen-units = 1
lto = true
strip = true